# nix-lib

./: LICENSE  README.md  flake.nix
dev/: flake.nix
dev/modules/: devShell.nix  nix-unit.nix  treefmt.nix
examples/: mkFlake-flake-parts.nix  mkFlake-standalone.nix
modules/: e2e-tests.nix  flake-file.nix  nix-let-fn-linter.nix  nix-lib-outputs.nix
modules/nix-lib/: linter.nix
modules/nix-lib/_lib/: backends.nix  default.nix  evalLibModules.nix  mkFlake.nix  mkLib.nix  mkSpecialArgsLib.nix  withLib.nix
modules/nix-lib/docs/: _generate-docs.py  _markdown.nix  package.nix
modules/nix-lib/lib/: flake.nix  perSystem.nix
tests/scenarios/linter-fail/: let-fn-violation.nix  run-test.sh
tests/scenarios/mkFlake-flake-parts/: flake.nix
tests/scenarios/mkFlake-flake-parts/libs/: math.nix
tests/scenarios/mkFlake-standalone/: flake.nix
tests/scenarios/mkFlake-standalone/libs/: math.nix
tests/scenarios/nix-unit/: flake.nix
tests/scenarios/nix-unit/.ezci/: env.sh  eval-cache.db
tests/scenarios/standalone/: flake.nix
tests/scenarios/standalone/.ezci/: env.sh  eval-cache.db
tools/nix-let-fn-linter/: .gitignore  Cargo.toml
tools/nix-let-fn-linter/src/: main.rs
