[package]
name = "nix-let-fn-linter"
version = "0.1.0"
edition = "2021"
description = "A linter that detects function definitions in Nix let-in blocks"
license = "MIT"
repository = "https://github.com/Dauliac/nlib"

[dependencies]
rnix = "0.11"
rowan = "0.15"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
walkdir = "2"
colored = "2"
glob = "0.3"
